@@ -98,100 +98,16 @@ package agar.core.event is
   -- API
   --
 
-  function set_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr;
-     handler    : func_t;
-     str        : cs.chars_ptr) return event_access_t;
-  pragma import (c, set_event, "AG_SetEvent");
- 
-  function set_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : string;
-     handler    : func_t;
-     str        : string) return event_access_t;
-  pragma inline (set_event);
- 
-  function add_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr;
-     handler    : func_t;
-     str        : cs.chars_ptr) return event_access_t;
-  pragma import (c, add_event, "AG_AddEvent");
- 
-  function add_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : string;
-     handler    : func_t;
-     str        : string) return event_access_t;
-  pragma inline (add_event);
-
-  procedure unset_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr);
-  pragma import (c, unset_event, "AG_UnsetEvent");
-
-  procedure unset_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : string);
-  pragma inline (unset_event); 
-
-  procedure post_event
-    (sender     : agar.core.types.void_ptr_t;
-     receiver   : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr;
-     fmt        : cs.chars_ptr);
-  pragma import (c, post_event, "AG_PostEvent");
-
-  procedure post_event
-    (sender     : agar.core.types.void_ptr_t;
-     receiver   : agar.core.types.void_ptr_t;
-     event_name : string;
-     fmt        : string);
-  pragma inline (post_event);
-
-  function find_event_handler
-    (object : agar.core.types.void_ptr_t;
-     name   : cs.chars_ptr) return event_access_t;
-  pragma import (c, find_event_handler, "AG_FindEventHandler");
-
   function find_event_handler
     (object : agar.core.types.void_ptr_t;
      name   : string) return event_access_t;
   pragma inline (find_event_handler);
-
-  function schedule_event
-    (sender     : agar.core.types.void_ptr_t;
-     receiver   : agar.core.types.void_ptr_t;
-     ticks      : agar.core.types.uint32_t;
-     event_name : cs.chars_ptr;
-     fmt        : cs.chars_ptr) return c.int;
-  pragma import (c, schedule_event, "AG_SchedEvent");
-
-  function schedule_event
-    (sender     : agar.core.types.void_ptr_t;
-     receiver   : agar.core.types.void_ptr_t;
-     ticks      : agar.core.types.uint32_t;
-     event_name : string;
-     fmt        : string) return boolean;
-  pragma inline (schedule_event);
-
-  function reschedule_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr;
-     ticks      : agar.core.types.uint32_t) return c.int;
-  pragma import (c, reschedule_event, "AG_ReschedEvent");
 
   function reschedule_event
     (object     : agar.core.types.void_ptr_t;
      event_name : string; 
      ticks      : agar.core.types.uint32_t) return boolean;
   pragma inline (reschedule_event);
-
-  function cancel_event
-    (object     : agar.core.types.void_ptr_t;
-     event_name : cs.chars_ptr) return c.int; 
-  pragma import (c, cancel_event, "AG_CancelEvent");
 
   function cancel_event
     (object     : agar.core.types.void_ptr_t;
