@@ -13,3 +13,6 @@
 20080824 code: updated object/class API.
 20080827 code: flags default to 0.
 20080827 code: format string audit. protect agar.core.error.
+20080827 code: agar.core.object format string.
+20080827 code: removed useless format string functions from agar.core.event
+               in preparation for array variants.
